--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,13 @@
-name: Release Container Images (scriptless, prev-tag within major)
+name: Release Container Images (image-diff only)
 
 on:
   push:
     tags:
-      - "v*.*"           # 例: v9.0.20250919.0 / v10.0.20250919.0
+      - "v*.*"         # 例: v9.0.20250919.0 / v10.0.20250919.0
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: write      # Release 作成に必要
 
 concurrency:
   group: release-${{ github.workflow }}-${{ github.ref }}-${{ github.run_id }}
@@ -25,183 +25,130 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install syft & jq & gh
+      - name: Install container-diff & jq
         run: |
           set -euxo pipefail
-          curl -sSfL https://get.anchore.io/syft | sudo sh -s -- -b /usr/local/bin
-          syft --version
           sudo apt-get update
           sudo apt-get install -y jq
-          type gh >/dev/null || (type apt && sudo apt-get install -y gh || true)
+          curl -sSL -o container-diff https://storage.googleapis.com/container-diff/latest/container-diff-linux-amd64
+          chmod +x container-diff
+          sudo mv container-diff /usr/local/bin/
+          container-diff version || true
 
-      - name: Extract tag/rel
+      - name: Extract release numbers
         id: ver
         shell: bash
         run: |
           set -euo pipefail
-          TAG="${GITHUB_REF##*/}"                          # v9.0.x
-          REL="$(echo "$TAG" | sed -E 's/^v([0-9]+)\..*$/\1/')"  # 9
-          echo "tag=$TAG" >> "$GITHUB_OUTPUT"
-          echo "rel=$REL" >> "$GITHUB_OUTPUT"
+          TAG="${GITHUB_REF##*/}"                          # v9.0.x / v10.0.x
+          REL="$(echo "$TAG" | sed -E 's/^v([0-9]+)\..*$/\1/')"  # 9 / 10
+          PREV="$((REL-1))"
+          echo "tag=$TAG"   >> "$GITHUB_OUTPUT"
+          echo "rel=$REL"   >> "$GITHUB_OUTPUT"
+          echo "prev=$PREV" >> "$GITHUB_OUTPUT"
 
-      - name: Find previous tag (same major) & try fetch previous SBOM
-        id: prev
-        env:
-          GH_TOKEN: ${{ github.token }}
+      - name: Build NEW image
         shell: bash
         run: |
-          set -euo pipefail
-          tag='${{ steps.ver.outputs.tag }}'
+          set -euxo pipefail
           rel='${{ steps.ver.outputs.rel }}'
           flavor='${{ matrix.flavor }}'
-
-          PREV_TAG="$(git tag --list "v${rel}.*" --sort=-version:refname | grep -v "^${tag}$" | head -n1 || true)"
-          echo "prev_tag=${PREV_TAG}" >> "$GITHUB_OUTPUT"
-
-          if [[ -z "${PREV_TAG}" ]]; then
-            echo "has_prev_sbom=false" >> "$GITHUB_OUTPUT"
-            exit 0
-          fi
-
-          mkdir -p prev_sbom
-          if gh release download "${PREV_TAG}" -p "${flavor}.json" -D prev_sbom; then
-            echo "has_prev_sbom=true" >> "$GITHUB_OUTPUT"
-            echo "old_sbom=prev_sbom/${flavor}.json" >> "$GITHUB_OUTPUT"
-          else
-            echo "has_prev_sbom=false" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: Build NEW image & SBOM (retry)
-        shell: bash
-        run: |
-          set -euo pipefail
-          rel='${{ steps.ver.outputs.rel }}'
-          flavor='${{ matrix.flavor }}'
-          tag="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
           file="Containerfiles/$rel/Containerfile.$flavor"
+          NEW="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
+          docker build -f "$file" -t "$NEW" .
 
-          docker build -f "$file" -t "$tag" .
-
-          mkdir -p "sbom/$rel"
-          out="sbom/$rel/$flavor.json"
-          for i in 1 2 3; do
-            syft "docker:$tag" -o json > "$out" && break
-            echo "syft failed (try $i). retrying..." >&2
-            sleep 5
-            if [[ $i -eq 3 ]]; then
-              echo "Syft failed 3 times for NEW image" >&2
-              exit 1
-            fi
-          done
-
-      - name: Build OLD image & SBOM (fallback when previous asset is missing)
-        if: steps.prev.outputs.has_prev_sbom != 'true'
-        id: oldsbom
+      - name: Build OLD image (optional; initial-safe)
+        id: oldimg
         shell: bash
         run: |
           set -euo pipefail
-          rel='${{ steps.ver.outputs.rel }}'
+          prev='${{ steps.ver.outputs.prev }}'
           flavor='${{ matrix.flavor }}'
-          prev_tag='${{ steps.prev.outputs.prev_tag }}'
-
-          if [[ -z "$prev_tag" ]]; then
+          oldfile="Containerfiles/$prev/Containerfile.$flavor"
+          if [[ ! -f "$oldfile" ]]; then
             echo "has_old=false" >> "$GITHUB_OUTPUT"
             exit 0
           fi
+          OLD="almalinux${prev}-${flavor}:__old__"
+          docker build -f "$oldfile" -t "$OLD" .
+          echo "has_old=true" >> "$GITHUB_OUTPUT"
+          echo "old_ref=$OLD" >> "$GITHUB_OUTPUT"
 
-          tmpfile="/tmp/old.Containerfile.$flavor"
-          if git show "$prev_tag:Containerfiles/$rel/Containerfile.$flavor" > "$tmpfile" 2>/dev/null; then
-            oldtag="almalinux${rel}-${flavor}:__old__"
-            docker build -f "$tmpfile" -t "$oldtag" .
-            mkdir -p old-sbom
-            out="old-sbom/${flavor}.json"
-            for i in 1 2 3; do
-              syft "docker:$oldtag" -o json > "$out" && break
-              echo "syft failed for OLD image (try $i). retrying..." >&2
-              sleep 5
-              if [[ $i -eq 3 ]]; then
-                echo "Syft failed 3 times for OLD image" >&2
-                echo "has_old=false" >> "$GITHUB_OUTPUT"
-                exit 0   # 旧SBOMなし → 初回扱い
-              fi
-            done
-            echo "has_old=true" >> "$GITHUB_OUTPUT"
-            echo "old_sbom=$out" >> "$GITHUB_OUTPUT"
-          else
-            echo "No Containerfile at previous tag; treat as initial."
-            echo "has_old=false" >> "$GITHUB_OUTPUT"
-
-      - name: Generate per-flavor changelog
+      - name: Generate per-flavor changelog (image diff only)
         shell: bash
         run: |
           set -euo pipefail
           rel='${{ steps.ver.outputs.rel }}'
           flavor='${{ matrix.flavor }}'
-          NEW="sbom/$rel/$flavor.json"
+          NEW="almalinux${rel}-${flavor}:${{ steps.ver.outputs.tag }}"
 
-          if [[ '${{ steps.prev.outputs.has_prev_sbom }}' == 'true' ]]; then
-            OLD='${{ steps.prev.outputs.old_sbom }}'
-          elif [[ '${{ steps.oldsbom.outputs.has_old }}' == 'true' ]]; then
-            OLD='${{ steps.oldsbom.outputs.old_sbom }}'
-          else
-            OLD=""
-          fi
-
-          if [[ ! -f "$NEW" ]]; then
-            echo "NEW SBOM missing: $NEW" >&2; exit 1
-          fi
-
-          if [[ -z "$OLD" || ! -f "$OLD" ]]; then
+          if [[ '${{ steps.oldimg.outputs.has_old }}' != 'true' ]]; then
             {
-              echo "# Initial Release: AlmaLinux $rel ($flavor)"
+              echo "# Initial Release (image diff): AlmaLinux $rel ($flavor)"
               echo
-              echo "- SBOM: \`$NEW\`"
-              echo "- Packages: \`$(jq -r '.artifacts | length' "$NEW" 2>/dev/null || echo "n/a")\`"
+              echo "No previous release directory to diff against (rel-1 missing)."
               echo
-              echo "No previous version to diff against."
+              echo "## Image Metadata (NEW)"
+              docker image inspect "$NEW" | jq -r '.[0] |
+                "Id: \(.Id)\nRepoTags: \(.RepoTags // [])\nSize: \(.Size) bytes\nConfig: Entrypoint=\(.Config.Entrypoint // []), Cmd=\(.Config.Cmd // []), Env=\((.Config.Env // [])|length) vars, Labels=\((.Config.Labels // {})|keys|length)"'
             } > "RELEASE_CHANGELOG-${flavor}.md"
             exit 0
           fi
 
-          jq -r '
-            if has("artifacts") then
-              .artifacts[] | "\(.name) \(.version)"
-            else
-              .artifacts[] | "\(.name) \(.version)"  # 予備（他ツールに差し替え時はここを拡張）
-            end
-          ' "$OLD" | sort > /tmp/old.txt
-          jq -r '
-            if has("artifacts") then
-              .artifacts[] | "\(.name) \(.version)"
-            else
-              .artifacts[] | "\(.name) \(.version)"
-            end
-          ' "$NEW" | sort > /tmp/new.txt
+          OLD='${{ steps.oldimg.outputs.old_ref }}'
 
-          cut -d' ' -f1 /tmp/old.txt | sort -u > /tmp/old.names
-          cut -d' ' -f1 /tmp/new.txt | sort -u > /tmp/new.names
+          # --- Inspect metadata (use Image ID; RepoDigest はローカルでは空のことが多い)
+          NEW_META=$(docker image inspect "$NEW")
+          OLD_META=$(docker image inspect "$OLD")
+          NEW_ID=$(echo "$NEW_META" | jq -r '.[0].Id')
+          OLD_ID=$(echo "$OLD_META" | jq -r '.[0].Id')
+          NEW_SIZE=$(echo "$NEW_META" | jq -r '.[0].Size // 0')
+          OLD_SIZE=$(echo "$OLD_META" | jq -r '.[0].Size // 0')
+          SIZE_DELTA=$((NEW_SIZE-OLD_SIZE))
 
-          ADDED_NAMES=$(comm -13 /tmp/old.names /tmp/new.names || true)
-          REMOVED_NAMES=$(comm -23 /tmp/old.names /tmp/new.names || true)
-          UPDATED=$(
-            join -j1 -o 1.1,1.2,2.2 <(sort /tmp/old.txt) <(sort /tmp/new.txt) |
-            awk '$2 != $3 {print $1" " $2 " -> " $3}' || true
-          )
+          SAME_IMG=false
+          [[ "$NEW_ID" == "$OLD_ID" ]] && SAME_IMG=true
+
+          # --- container-diff: file/metadata/history
+          container-diff diff daemon://"$OLD" daemon://"$NEW" \
+            --type=file --type=metadata --type=history --json > /tmp/diff.json
+
+          # --- File change counts & lists
+          jq -r '.[] | select(.AnalyserName=="File") | .Diff.Added[]?.Name'   /tmp/diff.json | sort > /tmp/added.txt || true
+          jq -r '.[] | select(.AnalyserName=="File") | .Diff.Deleted[]?.Name' /tmp/diff.json | sort > /tmp/removed.txt || true
+          jq -r '.[] | select(.AnalyserName=="File") | .Diff.Changed[]?.Name' /tmp/diff.json | sort > /tmp/changed.txt || true
+          ADDED=$(wc -l < /tmp/added.txt | xargs)
+          REMOVED=$(wc -l < /tmp/removed.txt | xargs)
+          MODIFIED=$(wc -l < /tmp/changed.txt | xargs)
+
+          TOP() { head -n "${1:-100}" || true; }
 
           {
-            echo "# Changelog: previous → v${{ steps.ver.outputs.tag }} ($flavor)"
+            echo "# Changelog (image diff): AlmaLinux $((rel-1)) → $rel ($flavor)"
             echo
-            echo "SBOM(old): \`$OLD\`"
-            echo "SBOM(new): \`$NEW\`"
+            echo "## Image Metadata"
+            echo "- OLD id: \`$OLD_ID\`"
+            echo "- NEW id: \`$NEW_ID\`"
+            echo "- Size: OLD \`$OLD_SIZE\` → NEW \`$NEW_SIZE\` (**Δ $SIZE_DELTA bytes**)"
+            if $SAME_IMG; then
+              echo
+              echo "> Note: Image IDs are identical. No filesystem/config changes are expected."
+            fi
             echo
-            echo "## Updated Packages"
-            echo '```'; [[ -n "$UPDATED" ]] && echo "$UPDATED" || echo "(none)"; echo '```'
+            echo "## File Changes (from container-diff)"
+            echo "- Added: \`$ADDED\`  Removed: \`$REMOVED\`  Modified: \`$MODIFIED\`"
             echo
-            echo "## Added Packages"
-            echo '```'; [[ -n "$ADDED_NAMES" ]] && echo "$ADDED_NAMES" || echo "(none)"; echo '```'
+            echo "### Added (top 100)";    echo '```'; TOP 100 < /tmp/added.txt;    echo '```'
+            echo "### Removed (top 100)";  echo '```'; TOP 100 < /tmp/removed.txt;  echo '```'
+            echo "### Modified (top 100)"; echo '```'; TOP 100 < /tmp/changed.txt;  echo '```'
             echo
-            echo "## Removed Packages"
-            echo '```'; [[ -n "$REMOVED_NAMES" ]] && echo "$REMOVED_NAMES" || echo "(none)"; echo '```'
+            echo "## History / Layers (from container-diff)"
+            jq -r '.[] | select(.AnalyserName=="History") | .Diff | to_entries[]
+              | "- \(.key): \(.value|tostring)"' /tmp/diff.json || true
+            echo
+            echo "## Config Diff (from container-diff metadata)"
+            jq -r '.[] | select(.AnalyserName=="Metadata") | .Diff | to_entries[]
+              | "- \(.key): \(.value|tostring)"' /tmp/diff.json || true
           } > "RELEASE_CHANGELOG-${flavor}.md"
 
       - name: Upload changelog artifact
@@ -209,14 +156,6 @@ jobs:
         with:
           name: changelog-${{ matrix.flavor }}
           path: RELEASE_CHANGELOG-${{ matrix.flavor }}.md
-          if-no-files-found: error
-          retention-days: 7
-
-      - name: Upload SBOM artifact (NEW)
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom-${{ steps.ver.outputs.rel }}-${{ matrix.flavor }}
-          path: sbom/${{ steps.ver.outputs.rel }}/${{ matrix.flavor }}.json
           if-no-files-found: error
           retention-days: 7
 
@@ -229,7 +168,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Extract tag/rel
+      - name: Extract release numbers (again)
         id: ver
         shell: bash
         run: |
@@ -261,7 +200,11 @@ jobs:
             fi
           done
           delim="EOF_$(date +%s)_$RANDOM"
-          { echo "body<<$delim"; cat body.txt; echo "$delim"; } >> "$GITHUB_OUTPUT"
+          {
+            echo "body<<$delim"
+            cat body.txt
+            echo "$delim"
+          } >> "$GITHUB_OUTPUT"
 
       - name: Create Release (single shot)
         uses: softprops/action-gh-release@v2
@@ -269,7 +212,5 @@ jobs:
           tag_name: ${{ steps.ver.outputs.tag }}
           name: "Version ${{ steps.ver.outputs.tag }}"
           body: ${{ steps.body.outputs.body }}
-          files: |
-            RELEASE_CHANGELOG-*.md
-            sbom/${{ steps.ver.outputs.rel }}/*.json
+          files: RELEASE_CHANGELOG-*.md
 
